daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N19_bad_downgrade/T1.hex
86781b6461796c696768742e617574682e7472616e7363726970742e76365840f3111b703c34e3b2487355556514f8682ca4ea27cd4454c2df9de9095a3823002b3332774b08f905734466b77d27ccf36d079570f97beb444aef3c28c9d4018958407aab6d4d66569683867ad22aa5052c781f87ac1704b3746669f0d2e6f397447120403b32f62ba249262d783a5ab35ce0891df6e8ae06daee28c2bf7e25023c3c5840c176ec3b3bf0cd0818bbe29ebe419f3e710cd795db73ac2e645fd21afa6f7560a42c614107183d30613475d626ec86772e052812293e662a9c45fb6d5dc402d25820f8f2e7eb4690a00e9ba79c71a830641e9cc7d182bd69562b419dc1ed8d9f40e6584006e160e72f3d521d50d3ed069f6317dfebfd40bdc798e5eaa4b2902e0b414853e06b36fa48b966e865db0d6caec5a804a48d7963d6922f01438587a7b32db712
